--- a/rpm/ISODrive.yaml
+++ b/rpm/ISODrive.yaml
@@ -1,12 +1,12 @@
 Name: ISODrive
 Summary: ISODrive
-Version: 0.1
+Version: 0.2
 Release: 1
 # The contents of the Group field should be one of the groups listed here:
 # http://gitorious.org/meego-developer-tools/spectacle/blobs/master/data/GROUPS
 Group: Qt/Qt
-URL: http://example.org/
-License: LICENSE
+URL: http://github.com/beidl/ISODrive
+License: GPLv2
 # This must be generated before uploading a package to a remote build service.
 # Usually this line does not need to be modified.
 Sources:
