--- a/rpm/ISODrive.changes.in
+++ b/rpm/ISODrive.changes.in
@@ -1,4 +1,9 @@
-* Fri Aug 15 2014 Alfred Neumayer <dev.beidl@gmail.com> 0.0.1-1
+* Sam Nov 29 2014 Alfred Neumayer <dev.beidl@gmail.com> 0.2-1
+- Fix TextSwitch selection
+- Correctly show the No File Hint
+- Use Icon in the cover
+
+* Fri Aug 15 2014 Alfred Neumayer <dev.beidl@gmail.com> 0.1-1
 - Initial release
 - Select ISO file to boot a PC using a SailfishOS smartphone
 - Unmount ISO using Cover or Pulley menu
