Adaptation for xperia 10 mark 2

--- a/rpm/ISODrive.changes.in
+++ b/rpm/ISODrive.changes.in
@@ -1,3 +1,6 @@
+* Thu Sep 30 2021 kvakanet 0.5.2
+- Adaptation for sony xperia 10 mark 2
+
 * Wed Feb 28 2018 Alfred Neumayer <dev.beidl@gmail.com> 0.4-1
 - Add Eject pulley menu
 - Change placeholder hint, mentioning external storage
